--- a/Events/Main_iPhone.storyboard
+++ b/Events/Main_iPhone.storyboard
@@ -248,12 +248,6 @@
                         <sections/>
                     </tableView>
                     <navigationItem key="navigationItem" title="Events" id="UiF-4Q-GbU">
-                        <barButtonItem key="leftBarButtonItem" systemItem="search" id="Hoa-xt-dcm">
-                            <color key="tintColor" red="0.92941176469999998" green="0.10980392160000001" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
-                            <connections>
-                                <action selector="searchButtonPressed:" destination="XMy-k7-mqo" id="f1z-sh-vGB"/>
-                            </connections>
-                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="3ec-V9-YvN">
                             <color key="tintColor" red="0.92941176469999998" green="0.10980392160000001" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
@@ -276,7 +270,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="afA-Kn-raX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1614.5" y="-2159.5"/>
+            <point key="canvasLocation" x="-1615" y="-2159.5"/>
         </scene>
         <!--Category Table View Controller-->
         <scene sceneID="QF4-Ku-B6I">
@@ -379,7 +373,6 @@
                                     <outlet property="lblDateTime" destination="h3g-dX-KSu" id="iEr-xW-buA"/>
                                     <outlet property="lblEventDesc" destination="YJ8-pl-dtf" id="m9B-ek-sVD"/>
                                     <outlet property="lblEventName" destination="6Gv-WM-z5V" id="Gep-3R-0Z9"/>
-                                    <segue destination="GJ5-Ez-Ag6" kind="push" identifier="aboutViewTwo" id="pzV-TR-cjy"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -435,9 +428,6 @@
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <state key="normal" image="CreateEventBtn.png"/>
-                                        <connections>
-                                            <segue destination="kYa-5B-zJd" kind="push" identifier="CreateWebView" id="GPB-HE-q9b"/>
-                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -2025,25 +2015,6 @@
             </objects>
             <point key="canvasLocation" x="-1032" y="-1308"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Yhh-dw-9OY">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kNW-t6-DO2" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" id="KCe-xV-4af"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GZx-w6-aj0">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="Qsp-nK-F0D" kind="relationship" relationship="rootViewController" id="XlZ-ZU-v8k"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mGc-ch-i7F" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1028.5" y="-3076.5"/>
-        </scene>
     </scenes>
     <resources>
         <image name="About.png" width="23" height="14"/>
@@ -2092,7 +2063,7 @@
         <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="GPB-HE-q9b"/>
-        <segue reference="pzV-TR-cjy"/>
+        <segue reference="BNm-lt-kVg"/>
+        <segue reference="z1t-Ts-zQv"/>
     </inferredMetricsTieBreakers>
 </document>
